overflow of skills section fixed

--- a/index.css
+++ b/index.css
@@ -445,7 +445,7 @@ user agent stylesheet a:-webkit-any-link {
   background-color: #9e9e9e !important;
   display: grid;
   width: 47vw;
-  margin: 10px 31px 10px 0px;
+  margin: 10px 24px 10px 0px;
   padding: 0px;
   /* left: 39px; */
   /* position: relative; */
